--- a/src/be/ac/ulb/infof307/g06/views/SettingsMenu.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/SettingsMenu.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.shape.Polygon?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.MenuViewController">
    <children>
       <HBox layoutX="259.0" layoutY="350.0" spacing="40.0">
@@ -39,9 +36,10 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" onAction="#events" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #4fc3f7;" text="?" textFill="#f2f1f0">
+            <Button fx:id="cloudBtn" mnemonicParsing="false" onAction="#events" prefHeight="201.0" prefWidth="223.0"
+                    style="-fx-background-color: #4fc3f7;" text="Cloud" textFill="#f2f1f0">
                <font>
-                  <Font size="36.0" />
+                  <Font size="36.0"/>
                </font>
             </Button>
             <Button mnemonicParsing="false" onAction="#events" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #4fc3f7;" text="?" textFill="#f2f1f0">
