--- a/src/be/ac/ulb/infof307/g06/views/CloudSettings.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/CloudSettings.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -12,7 +11,7 @@
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.CloudSettingsController">
    <children>
       <HBox layoutX="259.0" layoutY="350.0" spacing="40.0"/>
-      <Button fx:id="backBtn" layoutX="1252.0" layoutY="816.0" mnemonicParsing="false" onAction="#events"
+      <Button fx:id="backBtn" layoutX="1165.0" layoutY="815.0" mnemonicParsing="false" onAction="#events"
               prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
          <font>
             <Font name="Calibri" size="24.0"/>
@@ -66,8 +65,14 @@
             wrappingWidth="165.18308448791504"/>
       <TextField fx:id="clientIDField" alignment="CENTER" layoutX="760.0" layoutY="457.0" prefHeight="26.0"
                  prefWidth="422.0"/>
-      <Button fx:id="saveBtn" layoutX="1028.0" layoutY="816.0" mnemonicParsing="false" onAction="#events"
+      <Button fx:id="saveBtn" layoutX="943.0" layoutY="815.0" mnemonicParsing="false" onAction="#events"
               prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="SAVE" textFill="WHITE">
+         <font>
+            <Font name="Calibri" size="24.0"/>
+         </font>
+      </Button>
+      <Button fx:id="helpBtn" layoutX="1387.0" layoutY="815.0" mnemonicParsing="false" onAction="#events"
+              prefHeight="54.0" prefWidth="68.0" style="-fx-background-color: #4fc3f7;" text="?" textFill="WHITE">
          <font>
             <Font name="Calibri" size="24.0"/>
          </font>
