--- a/src/be/ac/ulb/infof307/g06/views/ProjectViews/ProjectsViewV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/ProjectViews/ProjectsViewV2.fxml
@@ -24,7 +24,7 @@
       <Polygon fill="#4fc3f70d" layoutX="1249.0" layoutY="-476.0" points="-374.0, 1376.0, 251.0, 476.0, 251.0, 1376.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="1173.0" layoutY="-456.0" points="-192.0, 1356.0, 327.0, 457.0, 327.0, 1356.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="1121.0" layoutY="-480.0" points="-56.0, 1381.0, 365.0, 481.0, 365.0, 1381.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <TreeTableView fx:id="treeProjects" layoutY="1.0" onMouseClicked="#displayProject" prefHeight="849.0" prefWidth="322.0">
+      <TreeTableView fx:id="treeProjects" layoutY="1.0" onMouseClicked="#onProjectSelected" prefHeight="849.0" prefWidth="322.0">
          <columns>
             <TreeTableColumn fx:id="treeProjectColumn" prefWidth="321.0" text="Projects" />
          </columns>
