--- a/src/be/ac/ulb/infof307/g06/views/Tags.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/Tags.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -21,9 +20,14 @@
    <children>
       <Pane layoutX="812.0" layoutY="77.0" prefHeight="823.0" prefWidth="688.0" style="-fx-background-color: #4fc3f7;">
          <children>
-            <ColorPicker fx:id="tagsColorPicker" layoutX="452.0" layoutY="57.0" prefHeight="25.0" prefWidth="96.0" />
-            <TextField fx:id="defaultTagNameTextField" layoutX="50.0" layoutY="57.0" prefHeight="25.0" prefWidth="381.0" promptText="Default tag's name" />
-            <Button fx:id="addBtn" layoutX="574.0" layoutY="57.0" mnemonicParsing="false" onAction="#events" prefHeight="25.0" prefWidth="81.0" style="-fx-background-color: #e1e1e1;" text="ADD" textFill="#7c7676">
+            <ColorPicker fx:id="tagsColorPicker" layoutX="409.0" layoutY="57.0" prefHeight="25.0" prefWidth="96.0" />
+            <TextField fx:id="defaultTagNameTextField" layoutX="20.0" layoutY="57.0" prefHeight="25.0" prefWidth="381.0" promptText="Tag's name" />
+            <Button fx:id="addBtn" layoutX="516.0" layoutY="57.0" mnemonicParsing="false" onAction="#events" prefHeight="25.0" prefWidth="54.0" style="-fx-background-color: #e1e1e1;" text="ADD" textFill="#7c7676">
+               <font>
+                  <Font name="Calibri" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="updateBtn" layoutX="581.0" layoutY="57.0" mnemonicParsing="false" onAction="#events" prefHeight="25.0" prefWidth="96.0" style="-fx-background-color: #e1e1e1;" text="UPDATE" textFill="#7c7676">
                <font>
                   <Font name="Calibri" size="12.0" />
                </font>
@@ -56,20 +60,14 @@
             <Font name="Calibri" size="48.0" />
          </font>
       </Text>
-      <TableView fx:id="defaultTagsTableView" layoutX="161.0" layoutY="164.0" prefHeight="679.0" prefWidth="465.0">
+      <TableView fx:id="defaultTagsTableView" layoutX="161.0" layoutY="164.0" onMouseClicked="#onTagSelected" prefHeight="679.0" prefWidth="465.0">
         <columns>
-          <TableColumn fx:id="defaultTagsColumn" prefWidth="463.99998474121094" text="default tags" />
+          <TableColumn fx:id="defaultTagsColumn" prefWidth="463.99998474121094" text="Tags" />
         </columns>
          <contextMenu>
             <ContextMenu>
               <items>
-                <MenuItem mnemonicParsing="false" text="Delete" />
-                  <MenuItem mnemonicParsing="false" text="Edit" />
-                  <Menu mnemonicParsing="false" text="Unspecified Menu">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Edit" />
-                    </items>
-                  </Menu>
+                <MenuItem mnemonicParsing="false" onAction="#deleteTag" text="Delete" />
               </items>
             </ContextMenu>
          </contextMenu>
