--- a/src/be/ac/ulb/infof307/g06/views/ProjectViews/CloudTable.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/ProjectViews/CloudTable.fxml
@@ -3,17 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1"
+<?import javafx.scene.layout.*?>
+<AnchorPane fx:id="downloadAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="be.ac.ulb.infof307.g06.views.ProjectViews.CloudTableController">
     <children>
-        <TableView layoutX="-1.0" prefHeight="303.0" prefWidth="600.0">
+        <TableView fx:id="cloudTable" layoutX="-1.0" prefHeight="303.0" prefWidth="600.0"
+                   AnchorPane.bottomAnchor="96.80000000000001" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                   AnchorPane.topAnchor="0.0">
             <columns>
-                <TableColumn fx:id="cloudTable" prefWidth="585.5999633669853" text="Files"/>
+                <TableColumn fx:id="filesColumn" maxWidth="599.2000122070312" minWidth="-1.0"
+                             prefWidth="583.1999999880791" resizable="false" text="Files"/>
             </columns>
         </TableView>
-        <Button fx:id="downloadBtn" layoutX="246.0" layoutY="337.0" mnemonicParsing="false" onAction="#events"
-                prefHeight="32.0" prefWidth="108.0" text="Download"/>
+        <Button fx:id="downloadBtn" layoutX="246.0" layoutY="337.0" maxHeight="-Infinity" maxWidth="-Infinity"
+                minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#events" prefHeight="32.0"
+                prefWidth="108.0" text="Download" AnchorPane.bottomAnchor="31.0" AnchorPane.leftAnchor="246.0"
+                AnchorPane.rightAnchor="246.0" AnchorPane.topAnchor="337.0"/>
     </children>
 </AnchorPane>
