Refactor Main into Controllers /!\ DONT FORGET TO CHANGE RUN CONFIGS /!\

--- a/src/be/ac/ulb/infof307/g06/views/ProjectViews/TaskEditView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/ProjectViews/TaskEditView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="256.0" prefWidth="435.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.EditTaskViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="256.0" prefWidth="435.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.ProjectViews.EditTaskViewController">
    <children>
       <VBox layoutX="52.0" layoutY="87.0" prefHeight="83.0" prefWidth="332.0" spacing="40.0">
          <children>
