--- a/src/be/ac/ulb/infof307/g06/views/StatisticsViews/StatsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/StatisticsViews/StatsView.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.StatsViewController">
+<AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.StatisticsViews.StatsViewController">
    <children>
       <VBox layoutX="145.0" layoutY="70.0" prefHeight="73.0" prefWidth="596.0">
          <children>
