--- a/src/be/ac/ulb/infof307/g06/views/StorageView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/StorageView.fxml
@@ -52,19 +52,27 @@
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE"
                  width="1500.0"/>
       <Text fill="WHITE" layoutX="13.0" layoutY="55.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0"
-            text="CLOUD SETTINGS" wrappingWidth="504.9830722808838">
+            text="Storage" wrappingWidth="504.9830722808838">
          <font>
             <Font name="Calibri" size="48.0"/>
          </font>
       </Text>
-      <TextField fx:id="accTokenField" alignment="CENTER" layoutX="760.0" layoutY="380.0" prefHeight="26.0"
-                 prefWidth="422.0"/>
-      <Text layoutX="518.0" layoutY="398.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Access Token:"
-            wrappingWidth="165.18308448791504"/>
-      <Text layoutX="518.0" layoutY="475.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Client Identifier"
-            wrappingWidth="165.18308448791504"/>
-      <TextField fx:id="clientIDField" alignment="CENTER" layoutX="760.0" layoutY="457.0" prefHeight="26.0"
-                 prefWidth="422.0"/>
+      <TextField fx:id="accTokenField" alignment="CENTER" layoutX="700.0" layoutY="435.0" prefHeight="26.0"
+                 prefWidth="535.0"/>
+      <Text layoutX="458.0" layoutY="453.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Access Token:"
+            wrappingWidth="165.18308448791504">
+         <font>
+            <Font size="18.0"/>
+         </font>
+      </Text>
+      <Text layoutX="458.0" layoutY="530.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Client Identifier"
+            wrappingWidth="165.18308448791504">
+         <font>
+            <Font size="18.0"/>
+         </font>
+      </Text>
+      <TextField fx:id="clientIDField" alignment="CENTER" layoutX="700.0" layoutY="512.0" prefHeight="26.0"
+                 prefWidth="535.0"/>
       <Button fx:id="saveBtn" layoutX="943.0" layoutY="815.0" mnemonicParsing="false" onAction="#events"
               prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="SAVE" textFill="WHITE">
          <font>
@@ -77,5 +85,35 @@
             <Font name="Calibri" size="24.0"/>
          </font>
       </Button>
+      <Text fill="#070707" layoutX="350.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Disk usage">
+         <font>
+            <Font size="24.0"/>
+         </font>
+      </Text>
+      <ProgressBar fx:id="diskBar" layoutX="649.0" layoutY="246.0" prefHeight="18.0" prefWidth="588.0" progress="0.0"/>
+      <Text fx:id="usageText" layoutX="458.0" layoutY="262.0" strokeType="OUTSIDE" strokeWidth="0.0">
+         <font>
+            <Font size="18.0"/>
+         </font>
+      </Text>
+      <Text layoutX="350.0" layoutY="359.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DropBox Credentials">
+         <font>
+            <Font size="24.0"/>
+         </font>
+      </Text>
+      <Text fx:id="adminText" layoutX="350.0" layoutY="641.0" strokeType="OUTSIDE" strokeWidth="0.0"
+            text="Admin settings" visible="false">
+         <font>
+            <Font size="24.0"/>
+         </font>
+      </Text>
+      <TextField fx:id="limitField" alignment="CENTER" layoutX="702.0" layoutY="679.0" prefHeight="26.0"
+                 prefWidth="535.0" visible="false"/>
+      <Text fx:id="limitText" layoutX="455.0" layoutY="699.0" strokeType="OUTSIDE" strokeWidth="0.0"
+            text="Disk usage limit (in MB)" visible="false">
+         <font>
+            <Font size="18.0"/>
+         </font>
+      </Text>
    </children>
 </AnchorPane>
