Packages names changed

--- a/src/be/ac/ulb/infof307/g06/views/projectViews/AddProjectView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/projectViews/AddProjectView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.CheckComboBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="473.0" prefWidth="541.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.ProjectViews.AddProjectViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="473.0" prefWidth="541.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.projectViews.AddProjectViewController">
    <children>
       <VBox layoutX="158.0" layoutY="77.0" prefHeight="293.0" prefWidth="226.0" spacing="40.0">
          <children>
