--- a/src/be/ac/ulb/infof307/g06/views/connectionViews/LoginView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/connectionViews/LoginView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<AnchorPane prefHeight="425.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.ConnectionsViews.LoginViewController">
+<AnchorPane prefHeight="425.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.connectionViews.LoginViewController">
    <children>
       <GridPane hgap="10.0" layoutY="-89.0" prefHeight="381.2" prefWidth="694.2" vgap="10.0" AnchorPane.bottomAnchor="89.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-89.0">
          <columnConstraints>
