--- a/src/be/ac/ulb/infof307/g06/views/connectionViews/SignUpView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/connectionViews/SignUpView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<AnchorPane prefHeight="425.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.ConnectionsViews.SignUpViewController">
+<AnchorPane prefHeight="425.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.connectionViews.SignUpViewController">
    <children>
       <GridPane hgap="10.0" layoutY="-89.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
                 minWidth="-Infinity" prefHeight="490.0" prefWidth="700.0" vgap="10.0" AnchorPane.bottomAnchor="33.0"
