--- a/src/be/ac/ulb/infof307/g06/views/statisticsViews/StatsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/statisticsViews/StatsView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.*?>
 <AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="be.ac.ulb.infof307.g06.views.StatisticsViews.StatsViewController">
+            fx:controller="be.ac.ulb.infof307.g06.views.statisticsViews.StatsViewController">
    <children>
       <VBox layoutX="145.0" layoutY="70.0" prefHeight="73.0" prefWidth="596.0">
          <children>
