--- a/src/be/ac/ulb/infof307/g06/views/StorageView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/StorageView.fxml
@@ -57,7 +57,7 @@
             <Font name="Calibri" size="48.0"/>
          </font>
       </Text>
-      <TextField fx:id="accTokenField" alignment="CENTER" layoutX="700.0" layoutY="435.0" prefHeight="26.0"
+      <TextField fx:id="accessTokenField" alignment="CENTER" layoutX="700.0" layoutY="435.0" prefHeight="26.0"
                  prefWidth="535.0"/>
       <Text layoutX="458.0" layoutY="453.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Access Token:"
             wrappingWidth="165.18308448791504">
