--- a/src/be/ac/ulb/infof307/g06/views/projectViews/ProjectsViewV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/projectViews/ProjectsViewV2.fxml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?scenebuilder-stylesheet ProjectsView.css?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TreeTableColumn?>
+<?import javafx.scene.control.TreeTableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.CheckComboBox?>
-<?import java.net.URL?>
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.projectViews.ProjectsViewController">
    <stylesheets>
       <URL value="@ProjectsView.css" />
@@ -40,37 +52,26 @@
                         <Font size="36.0" />
                      </font>
                   </Text>
-                  <Label fx:id="projectsDate" layoutX="39.0" layoutY="277.0" prefHeight="27.0" prefWidth="450.0"
-                         text="Date" textAlignment="CENTER">
+                  <Label fx:id="projectsDate" layoutX="39.0" layoutY="277.0" prefHeight="27.0" prefWidth="450.0" text="Date" textAlignment="CENTER">
                      <font>
-                        <Font size="18.0"/>
+                        <Font size="18.0" />
                      </font>
                   </Label>
-                  <TextArea fx:id="projectsDescription" disable="true" layoutX="39.0" layoutY="138.0" prefHeight="118.0"
-                            prefWidth="450.0" promptText="DESCRIPTION"/>
-                  <Button fx:id="exportProjectBtn" layoutX="391.0" layoutY="336.0" mnemonicParsing="false"
-                          onAction="#events" prefHeight="37.0" prefWidth="60.0" style="-fx-background-color: #4fc3f7;"
-                          text="Export"/>
-                  <Button fx:id="editBtn" layoutX="459.0" layoutY="336.0" mnemonicParsing="false" onAction="#events"
-                          prefHeight="37.0" prefWidth="60.0" style="-fx-background-color: #4fc3f7;" text="Edit"/>
-                  <ListView fx:id="projectTags" layoutX="37.0" layoutY="85.0" orientation="HORIZONTAL" prefHeight="43.0"
-                            prefWidth="450.0"/>
-                  <Button fx:id="importProjectBtn" layoutX="324.0" layoutY="336.0" mnemonicParsing="false"
-                          onAction="#events" prefHeight="37.0" prefWidth="60.0" style="-fx-background-color: #4fc3f7;"
-                          text="Import"/>
-                  <Button fx:id="cloudDownloadBtn" layoutX="234.0" layoutY="336.0" mnemonicParsing="false"
-                          onAction="#events" prefHeight="37.0" prefWidth="80.0" style="-fx-background-color: #4fc3f7;"
-                          text="Download"/>
-                  <Button fx:id="cloudUploadBtn" layoutX="144.0" layoutY="336.0" mnemonicParsing="false"
-                          onAction="#events" prefHeight="37.0" prefWidth="80.0" style="-fx-background-color: #4fc3f7;"
-                          text="Upload"/>
+                  <TextArea fx:id="projectsDescription" disable="true" layoutX="39.0" layoutY="138.0" prefHeight="118.0" prefWidth="450.0" promptText="DESCRIPTION" />
+                  <Button fx:id="exportProjectBtn" layoutX="391.0" layoutY="336.0" mnemonicParsing="false" onAction="#events" prefHeight="37.0" prefWidth="60.0" style="-fx-background-color: #4fc3f7;" text="Export" />
+                  <Button fx:id="editBtn" layoutX="459.0" layoutY="336.0" mnemonicParsing="false" onAction="#events" prefHeight="37.0" prefWidth="60.0" style="-fx-background-color: #4fc3f7;" text="Edit" />
+                  <ListView fx:id="projectTags" layoutX="37.0" layoutY="85.0" orientation="HORIZONTAL" prefHeight="43.0" prefWidth="450.0" />
+                  <Button fx:id="importProjectBtn" layoutX="324.0" layoutY="336.0" mnemonicParsing="false" onAction="#events" prefHeight="37.0" prefWidth="60.0" style="-fx-background-color: #4fc3f7;" text="Import" />
+                  <Button fx:id="cloudDownloadBtn" layoutX="234.0" layoutY="336.0" mnemonicParsing="false" onAction="#events" prefHeight="37.0" prefWidth="80.0" style="-fx-background-color: #4fc3f7;" text="Download" />
+                  <Button fx:id="cloudUploadBtn" layoutX="144.0" layoutY="336.0" mnemonicParsing="false" onAction="#events" prefHeight="37.0" prefWidth="80.0" style="-fx-background-color: #4fc3f7;" text="Upload" />
                </children>
             </Pane>
             <Pane layoutX="89.0" layoutY="465.0" prefHeight="459.0" prefWidth="546.0">
                <children>
                   <TableView fx:id="taskTable" editable="true" layoutX="25.0" layoutY="44.0" onMouseClicked="#onTaskSelected" prefHeight="317.0" prefWidth="512.0">
                      <columns>
-                        <TableColumn fx:id="taskColumn" prefWidth="510.0" text="Tasks" />
+                        <TableColumn fx:id="taskColumn" prefWidth="403.0" text="Tasks" />
+                        <TableColumn fx:id="taskTime" prefWidth="108.0" text="Time left" />
                      </columns>
                      <contextMenu>
                         <ContextMenu>
