--- a/src/be/ac/ulb/infof307/g06/views/projectViews/TaskEditView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/projectViews/TaskEditView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
@@ -9,9 +10,11 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="256.0" prefWidth="435.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.projectViews.EditTaskViewController">
    <children>
-      <VBox layoutX="52.0" layoutY="87.0" prefHeight="83.0" prefWidth="332.0" spacing="40.0">
+      <VBox layoutX="53.0" layoutY="23.0" prefHeight="83.0" prefWidth="332.0" spacing="40.0">
          <children>
-            <TextField fx:id="taskName" prefHeight="35.0" promptText="Task Name" />
+            <TextField fx:id="taskName" prefHeight="29.0" prefWidth="294.0" promptText="Task Name" />
+            <DatePicker fx:id="newStartDateTask" prefHeight="25.0" prefWidth="338.0" promptText="Start date" />
+            <DatePicker fx:id="newEndDateTask" prefHeight="25.0" prefWidth="338.0" promptText="End date" />
          </children>
       </VBox>
       <Text fx:id="errorText" fill="RED" layoutX="11.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="519.0">
@@ -19,6 +22,6 @@
             <Font name="Calibri" size="12.0" />
          </font>
       </Text>
-      <Button fx:id="editTaskBtn" layoutX="153.0" layoutY="170.0" mnemonicParsing="false" onAction="#taskEvents" prefHeight="41.0" prefWidth="131.0" style="-fx-background-color: #4fc3f7;" text="EDIT" />
+      <Button fx:id="editTaskBtn" layoutX="154.0" layoutY="201.0" mnemonicParsing="false" onAction="#taskEvents" prefHeight="41.0" prefWidth="131.0" style="-fx-background-color: #4fc3f7;" text="EDIT" />
    </children>
 </AnchorPane>
