--- a/src/be/ac/ulb/infof307/g06/views/statisticsViews/styles.css
+++ b/src/be/ac/ulb/infof307/g06/views/statisticsViews/styles.css
@@ -1,5 +1,5 @@
 .gradient-background{
-    -fx-background-color: linear-gradient(from 25% 25% to 100% 100%,#a7e4f8,#e2f3f7);
+    -fx-background-color: linear-gradient(from 25% 25% to 100% 100%,#a1ddf8,#e2f3f7);
 }
 
 .shadow{
