--- a/src/be/ac/ulb/infof307/g06/views/statisticsViews/StatsViewV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/statisticsViews/StatsViewV2.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -67,14 +68,18 @@
             </Pane>
          </children>
       </VBox>
-      <VBox layoutX="873.0" layoutY="107.0" prefHeight="704.0" prefWidth="513.0" spacing="50.0">
+      <VBox layoutX="873.0" layoutY="107.0" prefHeight="704.0" prefWidth="513.0" spacing="10.0">
          <children>
-            <Pane prefHeight="326.0" prefWidth="508.0" styleClass="container" stylesheets="@styles.css">
-               <children>
-                  <PieChart fx:id="projectsChart" layoutX="7.0" layoutY="14.0" prefHeight="299.0" prefWidth="499.0" />
-               </children>
-            </Pane>
-            <Pane prefHeight="326.0" prefWidth="508.0" styleClass="container" stylesheets="@styles.css">
+            <ScrollPane prefHeight="322.0" prefWidth="513.0" styleClass="container" stylesheets="@styles.css">
+               <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="541.0" prefWidth="556.0">
+                     <children>
+                        <PieChart fx:id="projectsChart" layoutX="-47.0" layoutY="-9.0" prefHeight="550.0" prefWidth="603.0" styleClass="container" stylesheets="@styles.css" />
+                     </children>
+                  </AnchorPane>
+               </content>
+            </ScrollPane>
+            <Pane prefHeight="370.0" prefWidth="513.0" styleClass="container" stylesheets="@styles.css">
                <children>
                   <BarChart fx:id="collaboratorsChart" layoutX="15.0" layoutY="14.0" prefHeight="299.0" prefWidth="479.0">
                     <xAxis>
