--- a/src/be/ac/ulb/infof307/g06/views/statisticsViews/StatsViewV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/statisticsViews/StatsViewV2.fxml
@@ -120,9 +120,14 @@
          </children>
       </Pane>
       <Line endX="1394.0" layoutX="104.0" layoutY="96.0" startX="-100.0" stroke="WHITE" />
-      <Label layoutX="33.0" layoutY="16.0" prefHeight="48.0" prefWidth="231.0" styleClass="shadow" stylesheets="@styles.css" text="Statistics">
+      <Label layoutX="33.0" layoutY="16.0" prefHeight="70.0" prefWidth="202.0" styleClass="shadow" stylesheets="@styles.css" text="Statistics ">
          <font>
             <Font size="48.0" />
+         </font>
+      </Label>
+      <Label layoutX="44.0" layoutY="69.0" prefHeight="17.0" prefWidth="151.0" styleClass="shadow" stylesheets="@styles.css" text="Overall view">
+         <font>
+            <Font name="DejaVu Sans Condensed Bold" size="12.0" />
          </font>
       </Label>
    </children>
