--- a/src/be/ac/ulb/infof307/g06/views/statisticsViews/StatsViewV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/statisticsViews/StatsViewV2.fxml
@@ -72,25 +72,33 @@
          <children>
             <ScrollPane prefHeight="322.0" prefWidth="513.0" styleClass="container" stylesheets="@styles.css">
                <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="541.0" prefWidth="556.0">
+                <AnchorPane fx:id="pieChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="541.0" prefWidth="556.0">
                      <children>
-                        <PieChart fx:id="projectsChart" layoutX="-47.0" layoutY="-9.0" prefHeight="550.0" prefWidth="603.0" styleClass="container" stylesheets="@styles.css" />
+                        <PieChart fx:id="projectsChart" layoutX="-1.0" layoutY="-9.0" prefHeight="550.0" prefWidth="588.0" styleClass="container" stylesheets="@styles.css" />
                      </children>
                   </AnchorPane>
                </content>
             </ScrollPane>
-            <Pane prefHeight="370.0" prefWidth="513.0" styleClass="container" stylesheets="@styles.css">
-               <children>
-                  <BarChart fx:id="collaboratorsChart" layoutX="15.0" layoutY="14.0" prefHeight="299.0" prefWidth="479.0">
-                    <xAxis>
-                      <CategoryAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis side="LEFT" />
-                    </yAxis>
-                  </BarChart>
-               </children>
-            </Pane>
+            <ScrollPane prefHeight="373.0" prefWidth="513.0">
+              <content>
+                <AnchorPane fx:id="barChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="463.0" prefWidth="1075.0">
+                     <children>
+                        <Pane fx:id="barChartPane" layoutY="2.0" prefHeight="461.0" prefWidth="943.0" styleClass="container" stylesheets="@styles.css">
+                           <children>
+                              <BarChart fx:id="tasksChart" layoutX="-3.0" layoutY="-1.0" prefHeight="358.0" prefWidth="501.0">
+                                <xAxis>
+                                  <CategoryAxis label="Projects" side="BOTTOM" />
+                                </xAxis>
+                                <yAxis>
+                                  <NumberAxis label="Tasks" side="LEFT" />
+                                </yAxis>
+                              </BarChart>
+                           </children>
+                        </Pane>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
          </children>
       </VBox>
       <Pane layoutX="119.0" layoutY="107.0" prefHeight="704.0" prefWidth="380.0" styleClass="container" stylesheets="@styles.css">
