code Cleanup and rePackaging

--- a/docs/be/ac/ulb/infof307/g06/views/MenuViewController.html
+++ b/docs/be/ac/ulb/infof307/g06/views/MenuViewController.html
@@ -79,7 +79,7 @@ loadScripts(document, 'script');</script>
                 <h1 title="Class MenuViewController" class="title">Class MenuViewController</h1>
             </div>
             <div class="inheritance" title="Inheritance Tree">java.lang.Object
-                <div class="inheritance">be.ac.ulb.infof307.g06.views.MenuViewController</div>
+                <div class="inheritance">be.ac.ulb.infof307.g06.views.mainMenuViews.MenuViewController</div>
             </div>
             <section class="description">
                 <dl class="notes">
