--- a/docs/be/ac/ulb/infof307/g06/views/InvitationViewController.html
+++ b/docs/be/ac/ulb/infof307/g06/views/InvitationViewController.html
@@ -80,7 +80,7 @@ loadScripts(document, 'script');</script>
                 <h1 title="Class InvitationViewController" class="title">Class InvitationViewController</h1>
             </div>
             <div class="inheritance" title="Inheritance Tree">java.lang.Object
-                <div class="inheritance">be.ac.ulb.infof307.g06.views.InvitationViewController</div>
+                <div class="inheritance">be.ac.ulb.infof307.g06.views.mainMenuViews.InvitationViewController</div>
             </div>
             <section class="description">
                 <dl class="notes">
