--- a/docs/be/ac/ulb/infof307/g06/views/StorageViewController.html
+++ b/docs/be/ac/ulb/infof307/g06/views/StorageViewController.html
@@ -79,7 +79,7 @@ loadScripts(document, 'script');</script>
                 <h1 title="Class StorageViewController" class="title">Class StorageViewController</h1>
             </div>
             <div class="inheritance" title="Inheritance Tree">java.lang.Object
-                <div class="inheritance">be.ac.ulb.infof307.g06.views.StorageViewController</div>
+                <div class="inheritance">be.ac.ulb.infof307.g06.views.settingsViews.StorageViewController</div>
             </div>
             <section class="description">
                 <dl class="notes">
