--- a/docs/be/ac/ulb/infof307/g06/views/TagsViewController.html
+++ b/docs/be/ac/ulb/infof307/g06/views/TagsViewController.html
@@ -84,7 +84,7 @@ loadScripts(document, 'script');</script>
                 <h1 title="Class TagsViewController" class="title">Class TagsViewController</h1>
             </div>
             <div class="inheritance" title="Inheritance Tree">java.lang.Object
-                <div class="inheritance">be.ac.ulb.infof307.g06.views.TagsViewController</div>
+                <div class="inheritance">be.ac.ulb.infof307.g06.views.settingsViews.TagsViewController</div>
             </div>
             <section class="description">
                 <dl class="notes">
